[build-system]
requires = ["scikit_build_core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "map_closures"
version = "2.0.2"
description = "Effectively Detecting Loop Closures using Point Cloud Density Maps"
readme = "README.md"
authors = [{ name = "Saurabh Gupta" }, { name = "Tiziano Guadagnino" }]
requires-python = ">=3.8"
keywords = ["Loop Closures", "Localization", "SLAM", "LiDAR"]
dependencies = [
    "kiss-icp>=1.2.0",
    "numpy<2.0.0",
    "pyquaternion",
    "pydantic>=2",
    "pydantic-settings",
    "tqdm",
    "typer[all]>=0.6.0",
    "rich",
    "typing_extensions",
]

[project.optional-dependencies]
all = [
    "open3d>0.13",
    "PyYAML",
    "mcap-ros2-support",
    "rosbags",
    "trimesh",
    "ouster-sdk",
    "pyntcloud",
]
visualizer = ["polyscope", "matplotlib>3.9.2"]

[project.scripts]
map_closure_pipeline = "map_closures.tools.cmd:run"
gt_closure_pipeline = "map_closures.tools.gt_closures:run"

[project.urls]
Homepage = "https://github.com/PRBonn/MapClosures"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.verbose = false
cmake.minimum-version = "3.22"
editable.mode = "redirect"
editable.rebuild = true
editable.verbose = true
sdist.exclude = ["pybind/"]
wheel.install-dir = "map_closures/pybind/"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "100"

[tool.cibuildwheel]
archs = ["auto64"]
skip = ["*-musllinux*", "pp*", "cp36-*"]

[tool.cibuildwheel.macos]
environment = "MACOSX_DEPLOYMENT_TARGET=11.00"
archs = ["auto64", "arm64"]
