[build-system]
requires = ["scikit_build_core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "map_closures"
version = "2.1.0"
description = "Effectively Detecting Loop Closures using Point Cloud Density Maps"
authors = [{ name = "Saurabh Gupta" }, { name = "Tiziano Guadagnino" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Other Audience",
  "Intended Audience :: Science/Research",
  "Programming Language :: C++",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

keywords = ["Loop Closures", "Localization", "SLAM", "LiDAR"]

dependencies = [
    "kiss-icp>=1.2.3, <=1.3.0",
    "numpy>=2.1.0, <2.3.0",
    "scipy>=1.14.0, <1.18.0",
    "pydantic>=2.11,<2.14",
    "pydantic-settings>=2.12,<2.15",
    "typer[all]>=0.24.0, <0.26.0",
    "typing_extensions",
    "tqdm~=4.67"
]

[project.optional-dependencies]
all = [
    "open3d>=0.19,<0.20",
    "pyyaml~=6.0",
    "mcap-ros2-support",
    "rosbags>=0.10,<0.12",
    "trimesh",
    "ouster-sdk",
    "pyntcloud",
]
visualizer = ["polyscope", "matplotlib>3.9.2"]

[project.scripts]
map_closure_pipeline = "map_closures.tools.cmd:run"

[project.urls]
Homepage = "https://github.com/PRBonn/MapClosures"

[tool.scikit-build]
build-dir = "build/{wheel_tag}"
cmake.verbose = false
cmake.minimum-version = "3.22"
editable.mode = "redirect"
editable.rebuild = true
editable.verbose = true
sdist.exclude = ["pybind/"]
wheel.install-dir = "map_closures/pybind/"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "100"

[tool.cibuildwheel]
archs = ["auto64"]
skip = ["*-musllinux*", "pp*", "cp36-*", "cp37-*", "cp38-*", "cp39-*"]

[tool.cibuildwheel.macos]
environment = "MACOSX_DEPLOYMENT_TARGET=11.00"
archs = ["auto64", "arm64"]
